# VulkanProject

./: .gitignore  CMakeLists.txt
.commands/: CompileShaders.bat
shaders/: Shader.vert
source/: main.cpp
source/core/: Assert.hpp  CoreTypes.hpp  Defines.hpp  IntegralTypeAliases.hpp  StdTypeAliases.hpp
